k8s/ingress/ingress-nginx/demo/1-ingress-nginx.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dm
spec:
  replicas: 2
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
        - name: nginx
          image: harbor.xiaotest.com/library/myapp:v1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    name: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ing
spec:
  rules:
  - host: www.xiaotest.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc
          servicePort: 80
